name:                andthen
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/andthen#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, aeson,
                       bytestring, conduit, data-default, HMarkov, lens,
                       mtl, text, text-conversions, text-icu, tokenize,
                       twitter-conduit, twitter-types, twitter-types-lens,
                       vector, wordfilter
  default-language:    Haskell2010
  extra-lib-dirs:      /usr/local/opt/icu4c/lib
  include-dirs:        /usr/local/opt/icu4c/include

Test-Suite test-andthen
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test, src
  main-is:            test/Spec.hs
  build-depends:      tasty >= 0.11.0.0,
                      tasty-hunit,
                      tasty-quickcheck

source-repository head
  type:     git
  location: https://github.com/swizzard/andthen
